--- a/Laba/appsettings.json
+++ b/Laba/appsettings.json
@@ -4,5 +4,14 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:9029"
+      }
+    }
+  }
 }
+
+
